--- a/sites/all/themes/district_portal/less/header.less
+++ b/sites/all/themes/district_portal/less/header.less
@@ -162,6 +162,21 @@
   }
 }
 
+@media (max-width: @screen-lg) {
+  #site-header {
+    padding-left: 10px;
+  }
+  .inset-text-effect {
+    font: normal 41px/1 "Aladin", Helvetica, sans-serif;
+  }
+  .site-name {
+    font-size: @font-size-h3;
+    .lead {
+      font-size: @font-size-h4;
+    }
+  }
+}
+
 @media (max-width: @screen-tablet) {
   .navbar-default .navbar-nav .open .dropdown-menu {
     > li > a {
